--- a/index.html
+++ b/index.html
@@ -48,8 +48,13 @@
 										<p class="project-date">2018</p>
 										<div class="project-desc">
 											<p>
-												My current project, I was tapped to migrate one of our flagship sites (TicketLiquidator.com) from a CMS that was being decommissioned, to our licensed third party CMS.
+												My current project, I was tapped to migrate one of our flagship sites (TicketLiquidator.com) from a CMS 
+                                                that was being decommissioned to our licensed third party CMS given my familiarity with the latter.
 											</p>
+                                            <p>
+                                                I rebuilt the site within the new framework with additional changes requested by 
+                                                the site's content team (eg having 4 event tiles that scroll horizontally on mobile).
+                                            </p>
 										</div>
 										<a class="tile-link btn" target="_blank" href="http://beta.ticketliquidator.com">View Site</a>
 									</div>
@@ -66,7 +71,9 @@
 										<p class="project-date">2018</p>
 										<div class="project-desc">
 											<p>
-												This site was made to be the sister site of another internal site run by our company, <a target="_blank" href="https://www.sonicseats.com/">SonicSeats.com</a>.  The latter only offers inventory that can be delivered electronically, so ZeroMarkup exists to send customers to whenever the only inventory available is hard-stock.
+												This site was made to be the sister site of another internal site run by our company, 
+                                                <a target="_blank" href="https://www.sonicseats.com/">SonicSeats.com</a>.  The latter only offers inventory that can be 
+                                                delivered electronically, so another site was wanted to send users to if only hard-stock inventory was available.
 											</p>
 										</div>
 										<a class="tile-link btn" target="_blank" href="https://zeromarkup.com">View Site</a>
@@ -84,7 +91,7 @@
 										<p class="project-date">2018</p>
 										<div class="project-desc">
 											<p>
-
+                                                Designed and built this template for a series of venue-focused ticketing sites.
 											</p>
 										</div>
 										<a class="tile-link btn" target="_blank" href="https://www.centernewark.org">View Site</a>
@@ -102,7 +109,9 @@
 										<p class="project-date">2017</p>
 										<div class="project-desc">
 											<p>
-
+                                                I built this at the request of the CEO who wanted an internal Broadway-focused site to take advantage of the high sale prices. 
+                                                I created it in accordance to his design requests, including writing custom JavaScript to achieve the event calendars 
+                                                he wanted (referenced in the JavaScript section below)
 											</p>
 										</div>
 										<a class="tile-link btn" target="_blank" href="http://newyorktheatertickets.center">View Site</a>
@@ -120,13 +129,17 @@
 										<p class="project-date">2017</p>
 										<div class="project-desc">
 											<p>
-												Our CEO was reviewing how the sites within our CMS looked without any customization. He decided they were <a target="_blank" href="http://default.showsearch.com">too dated looking and empty</a> and insisted that our clients should have great looking sites right out-of-the-box.
+                                                Our company utilizes a licensed third-party CMS to provide pre-built template sites for ticket brokers and marketers. 
+                                                Recently our CEO reviewed the <a target="_blank" href="http://default.showsearch.com">default appearance</a> and 
+                                                was disappointed that the sites looked dated and that the template options didn't provide meaningful enough differentiation.
 											</p>
 											<p>
-												I was asked to create a new template to be passed on to the CMS developer to implement as the new default.  One of the key objectives was for meaningful customization options so that newly created sites wouldn't all be identical.
+												I was asked to create a new template that addressed these issues which would then be passed on to the 
+                                                CMS developer to implement as the new default.
 											</p>
 											<p>
-												I built this on top of the existing template and implemented a quick and dirty configuration menu on it to demonstrate the different looks and the options that should be added to the CMS interface.
+												I built this site on top of the existing template and implemented a quick and dirty configuration menu on it 
+                                                to demonstrate what options we wanted added to the CMS and how they would interact with the template's layout.
 											</p>
 										</div>
 										<a class="tile-link btn" target="_blank" href="http://revamp.showsearch.com">View Site</a>
@@ -144,7 +157,7 @@
 										<p class="project-date">2017</p>
 										<div class="project-desc">
 											<p>
-												This site was created to match <a target="_blank" href="https://ezevent.com/">ezEvent</a>, one of our own sites which offers ticketing solutions for people hosting events.
+												Designed to match the branding of <a target="_blank" href="https://ezevent.com/">ezEvent</a>. 
 											</p>
 										</div>
 										<a class="tile-link btn" target="_blank" href="https://tickets.ezevent.com">View Site</a>
@@ -162,7 +175,8 @@
 										<p class="project-date">2017</p>
 										<div class="project-desc">
 											<p>
-												
+												Rather than represent the home page in the images, I'm specifically showing and linking to the Octane page to 
+                                                demonstrate the flipping card mechanic I implemented on that page.
 											</p>
 										</div>
 										<a class="tile-link btn" target="_blank" href="https://octane.rad.tickets">View Site</a>
@@ -180,7 +194,10 @@
 										<p class="project-date">2017</p>
 										<div class="project-desc">
 											<p>
-												On 4pm on a Friday a member of our Ancilliary Revenue Team contacted me asking if it as too late of notice to ask me to put together a site for EOD.  This site was to be a demo to present to <a target="_blank" href="https://www.wsj.com/">The Wall Street Journal</a> as part of an offer to form a business relationship.
+												On 4pm on a Friday a member of our Ancilliary Revenue Team contacted me asking if it as too late of notice 
+                                                to ask me to put together a site for EOD.  This site was to be a demo to present 
+                                                to <a target="_blank" href="https://www.wsj.com/">The Wall Street Journal</a> as part of an offer to 
+                                                form a business relationship.
 											</p>
 										</div>
 										<a class="tile-link btn" target="_blank" href="http://wsj.fansupfront.com">View Site</a>
@@ -198,6 +215,7 @@
 										<p class="project-date">2017</p>
 										<div class="project-desc">
 											<p>
+                                                Designed and built for a client with the main goal being to utilize their extensive catalog of Broadway imagery.
 											</p>
 										</div>
 										<a class="tile-link btn" target="_blank" href="http://onbroadway.com">View Site</a>
@@ -267,7 +285,8 @@
 										<p class="project-date">2015</p>
 										<div class="project-desc">
 											<p>
-												A coworker and I were put in charge of overhauling the company"s corporate website to give it a more modern appearance and to make it comport with our branding guidelines.
+												A coworker and I were put in charge of overhauling the company's corporate website to give it a more modern 
+                                                appearance, make it responsive, and have it comport with our branding guidelines.
 											</p>
 										</div>
 										<a class="tile-link btn" target="_blank" href="https://corporate.ticketnetwork.com">View Site</a>
@@ -314,11 +333,18 @@
 										<h3 class="project-title">Event Results as Cards</h3>
 										<p class="project-date">2017</p>
 										<div class="project-desc">
+                                            <p>
+                                                One of the biggest challenges with ticketing sites is the desire to use images to advertise events without 
+                                                needing to constantly curate the events to keep them up-to-date.
+                                            </p>
 											<p>
-												Since a specific Broadway show only plays at one specific Broadway venue, this offered an opportunity to display the output of the 'event results' plugin in a more interesting way than a simple list.
+                                                This code takes advantage of NewYorkTheaterTickets being a Broadway specific site since there are a limited set 
+                                                of ongoing Broadway shows, and each show is specific to one theater.
 											</p>
 											<p>
-												I coded some script that pulls the important data from the results and creates cards
+												The code takes the data from an 'Event Results' plugin specific for the upcoming week (pictured top left) and arranges it into Event-Venue cards 
+                                                with available showings in the next 7 days.  The image is pulled from a collection of Broadway show images kept on AWS S3.  The only time an update needs to 
+                                                be made is when a new Broadway show debuts and a image needs to be added for it.
 											</p>
 										</div>
 										<a class="tile-link btn" target="_blank" href="https://jsfiddle.net/steven_willets/3twx0seL/">View in JSFiddle</a>
@@ -336,10 +362,7 @@
 										<p class="project-date">2017</p>
 										<div class="project-desc">
 											<p>
-												As with the 'Event Results as Cards', this code is taking advantage of a specific event that is occuring at a single venue.
-											</p>
-											<p>
-												The script pulls the data from a 'event results' plugin and maps it onto a jQuery UI calendar.
+												Made for the NewYorkTheaterTickets site, this code takes the data from an 'event results' plugin (pictured top left) and maps it to a jQuery UI calendar.
 											</p>
 										</div>
 										<a class="tile-link btn" target="_blank" href="https://jsfiddle.net/steven_willets/d9365oq8/">View in JSFiddle</a>
@@ -356,15 +379,15 @@
 										<h3 class="project-title">Search Widget Builder</h3>
 										<p class="project-date">2016</p>
 										<div class="project-desc">
-											<p>
-												One half of my first intensive JavaScript project, I was tasked with updating the affiliate tools for our titular website.  This required both updating the HTML and JS of the builder and the code for the widget itself.
-											</p>
-											<p>
-												The original version of the builder page was written using tables for layout and the JS was written in vanilla JS with no consideration made for the possibility of adding or removing affiliate networks to the tool.
-											</p>
-											<p>
-												Rather than perpetuate the existing mess by tacking onto it, I rewrote the HTML and JS to be more streamlined and more easy to update in the future.
-											</p>
+                                            <p>
+                                                This is a tool for creating a widget for affiliates to put on their own websites.
+                                            </p>
+                                            <p>
+                                                The original version was written using table elements and vanilla JS with no consideration made for the possibility of adding or removing affiliate networks to the tool.
+                                            </p>
+                                            <p>
+                                                Rather make it into a larger mess by trying to build upon that code, I rewrote the HTML and JS to be more streamlined and more easy to update in the future.
+                                            </p>
 										</div>
 										<a class="tile-link btn" target="_blank" href="https://jsfiddle.net/steven_willets/xw7sc182/">View in JSFiddle</a>
 									</div>
@@ -381,13 +404,13 @@
 										<p class="project-date">2016</p>
 										<div class="project-desc">
 											<p>
-												One half of my first intensive JavaScript project, I was tasked with updating the affiliate tools for our titular website.  This required both updating the HTML and JS of the builder and the code for the widget itself.
+												This is a tool for creating a plugin for affiliates to put on their own websites 
 											</p>
 											<p>
-												The original version of the builder page was written using tables for layout and the JS was written in vanilla JS with no consideration made for the possibility of adding or removing affiliate networks to the tool.
+												The original version was written using table elements and vanilla JS with no consideration made for the possibility of adding or removing affiliate networks to the tool.
 											</p>
 											<p>
-												Rather than perpetuate the existing mess by tacking onto it, I rewrote the HTML and JS to be more streamlined and more easy to update in the future.
+												Rather make it into a larger mess by trying to build upon that code, I rewrote the HTML and JS to be more streamlined and more easy to update in the future.
 											</p>
 										</div>
 										<a class="tile-link btn" target="_blank" href="https://jsfiddle.net/steven_willets/m5vxyc9g/">View in JSFiddle</a>
@@ -401,7 +424,7 @@
         </div>
         <footer class="section-wrapper">
             <div class="section-container">
-				<ul class='contact-info content-section'>
+				<ul class='contact-info content-section h-card'>
 					<li class="contact-item">
 						<span class="p-adr"> 
 							<i class="fas fa-map-marker-alt"></i>
