--- a/index.html
+++ b/index.html
@@ -193,12 +193,15 @@
 										<h3 class="project-title">Wall Street Journal Tickets</h3>
 										<p class="project-date">2017</p>
 										<div class="project-desc">
-											<p>
-												On 4pm on a Friday a member of our Ancilliary Revenue Team contacted me asking if it as too late of notice 
-                                                to ask me to put together a site for EOD.  This site was to be a demo to present 
-                                                to <a target="_blank" href="https://www.wsj.com/">The Wall Street Journal</a> as part of an offer to 
+                                            <p>
+                                                On 4pm on a Friday a member of our Ancilliary Revenue Team contacted me asking if it as too late of notice
+                                                to ask me to put together a site for EOD.
+                                            </p>
+                                            <p>
+                                                This site was to be a demo to present
+                                                to <a target="_blank" href="https://www.wsj.com/">The Wall Street Journal</a> as part of an offer to
                                                 form a business relationship.
-											</p>
+                                            </p>
 										</div>
 										<a class="tile-link btn" target="_blank" href="http://wsj.fansupfront.com">View Site</a>
 									</div>
