--- a/index.html
+++ b/index.html
@@ -70,11 +70,14 @@
 										<h3 class="project-title">Zero Markup</h3>
 										<p class="project-date">2018</p>
 										<div class="project-desc">
-											<p>
-												This site was made to be the sister site of another internal site run by our company, 
-                                                <a target="_blank" href="https://www.sonicseats.com/">SonicSeats.com</a>.  The latter only offers inventory that can be 
+                                            <p>
+                                                This site was made to be the sister site of another internal site run by our company,
+                                                <a target="_blank" href="https://www.sonicseats.com/">SonicSeats.com</a>.
+                                            </p>
+                                            <p>
+                                                The latter only offers inventory that can be
                                                 delivered electronically, so another site was wanted to send users to if only hard-stock inventory was available.
-											</p>
+                                            </p>
 										</div>
 										<a class="tile-link btn" target="_blank" href="https://zeromarkup.com">View Site</a>
 									</div>
@@ -108,11 +111,13 @@
 										<h3 class="project-title">NewYorkTheaterTickets</h3>
 										<p class="project-date">2017</p>
 										<div class="project-desc">
-											<p>
-                                                I built this at the request of the CEO who wanted an internal Broadway-focused site to take advantage of the high sale prices. 
-                                                I created it in accordance to his design requests, including writing custom JavaScript to achieve the event calendars 
+                                            <p>
+                                                I built this at the request of the CEO who wanted an internal Broadway-focused site to take advantage of the high sale prices.
+                                            </p>
+                                            <p>
+                                                I created it in accordance to his design requests, including writing custom JavaScript to achieve the event calendars
                                                 he wanted (referenced in the JavaScript section below)
-											</p>
+                                            </p>
 										</div>
 										<a class="tile-link btn" target="_blank" href="http://newyorktheatertickets.center">View Site</a>
 									</div>
