--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 										<p class="project-date">2018</p>
 										<div class="project-desc">
 											<p>
-												My current project, I was tapped to migrate one of our flagship sites (TicketLiquidator.com) from a CMS 
+												My current project, I was tapped to migrate one of our flagship sites, <a href="https://www.ticketliquidator.com" target="_blank">TicketLiquidator.com</a>, from a CMS 
                                                 that was being decommissioned to our licensed third party CMS given my familiarity with the latter.
 											</p>
                                             <p>
