--- a/index.html
+++ b/index.html
@@ -412,13 +412,10 @@
 										<p class="project-date">2016</p>
 										<div class="project-desc">
 											<p>
-												This is a tool for creating a plugin for affiliates to put on their own websites 
+												This generates a plugin that enables any site to become a ticket selling website.
 											</p>
 											<p>
-												The original version was written using table elements and vanilla JS with no consideration made for the possibility of adding or removing affiliate networks to the tool.
-											</p>
-											<p>
-												Rather make it into a larger mess by trying to build upon that code, I rewrote the HTML and JS to be more streamlined and more easy to update in the future.
+												The builder provides various specificity options so that the user can tailor the results to match their needs.
 											</p>
 										</div>
 										<a class="tile-link btn" target="_blank" href="https://jsfiddle.net/steven_willets/m5vxyc9g/">View in JSFiddle</a>
