--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 </head>
 
 <body>
-    <div id="code-portfolio" class="page-container" data-role="page">
-        <header data-role="header">
+    <div id="code-portfolio" class="page-container">
+        <header>
         </header>
         <div id="business-card" class="section-wrapper">
             <div class="section-container">
@@ -32,7 +32,7 @@
                 </section>
             </div>
         </div>
-        <div id="main-content" class="section-wrapper"  data-role="main">
+        <div id="main-content" class="section-wrapper">
             <div class="section-container">
                 <main class="content-section">
 					<h1 class="main-heading">Portfolio</h1>
@@ -429,7 +429,7 @@
                 </main>
             </div>
         </div>
-        <footer class="section-wrapper" data-role="footer">
+        <footer class="section-wrapper">
             <div class="section-container">
 				<ul class='contact-info content-section h-card'>
 					<li class="contact-item">
