--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                                 Designed and built this template for a series of venue-focused ticketing sites.
 											</p>
 										</div>
-										<a class="tile-link btn" target="_blank" href="https://www.centernewark.org">View Site</a>
+										<a class="tile-link btn" target="_blank" href="http://newark.showsearch.com/">View Site</a>
 									</div>
 								</article>
 							</li>
