--- a/index.html
+++ b/index.html
@@ -348,6 +348,7 @@
                                             </p>
 										</div>
 										<a class="tile-link btn" target="_blank" href="https://jsfiddle.net/steven_willets/xw7sc182/">View in JSFiddle</a>
+										<a class="tile-link btn" target="_blank" href="http://tnaffiliateprogram.com/affiliate-tools-2/search-widget/">View Live</a>
 									</div>
 								</article>
 							</li>
@@ -369,6 +370,7 @@
 											</p>
 										</div>
 										<a class="tile-link btn" target="_blank" href="https://jsfiddle.net/steven_willets/m5vxyc9g/">View in JSFiddle</a>
+										<a class="tile-link btn" target="_blank" href="http://tnaffiliateprogram.com/affiliate-tools-2/event-list-plug-in/">View Live</a>
 									</div>
 								</article>
 							</li>								
