--- a/exercise.html
+++ b/exercise.html
@@ -145,11 +145,11 @@ Persistent - the content must remain visible until hover or focus is removed, th
 		</li>
 	</ul>
 	<a tabindex="1" id="prev-slide" class="move-slide" href="prev" aria-label="Previous" role="button">
-		<i class="fa fa-angle-left" aria-hidden="true"></i>
+		<span aria-hidden="true">&#12296;</span>
 		<span class="sr-only">Previous</span>
 	</a>
 	<a tabindex="1" id="next-slide" class="move-slide" href="next" aria-label="Next" role="button">
-		<i class="fa fa-angle-right" aria-hidden="true"></i>
+		<span aria-hidden="true">&#12298;</span>
 		<span class="sr-only">Next</span>
 	</a>
 </div>
