--- a/carousel.html
+++ b/carousel.html
@@ -6,7 +6,7 @@
     <meta name="description" content="ZAG Homework" />
     <link rel="canonical" href="https://steven-willets.github.io/exercise" />
     <title>Exercise - Steven Willets</title>
-    <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <link href="images/favicon-smile.ico" rel="shortcut icon" type="image/x-icon" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amatic+SC|Lato|Muli">
     <link rel="stylesheet" href="styles/jquery.mobile.structure-1.4.5.min.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
