--- a/carousel.html
+++ b/carousel.html
@@ -190,12 +190,22 @@
                 transform: scaleX(-1);
             }
 		@media (max-width:1199px) {
-		.slide {
-			padding: 10px 20px;
+			.carousel-subheading {
+				padding-bottom: 20px;
+			}
+			.slide {
+				padding: 10px 20px;
 			}
 			.slide-image {
 				height: 140px;
 			}
+			.slide-quote {
+				padding: 20px 0;
+			}
+			.move-slide img {
+				height: 130px;
+			}
+			
 		}
         @media (max-width:992px) {
             .carousel-heading {
